{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 78,
  "lineage": "c0cc311c-c840-6d68-9ff3-8db54714ba75",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80-81"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-02T14:15:58.296-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/desafio-project/global/firewalls/meister-fw-allow-http",
            "log_config": [],
            "name": "meister-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/networks/desafio-network",
            "priority": 1000,
            "project": "desafio-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/firewalls/meister-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-03T18:35:18.830-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/desafio-project/global/firewalls/meister-fw-allow-https",
            "log_config": [],
            "name": "meister-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/networks/desafio-network",
            "priority": 1000,
            "project": "desafio-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/firewalls/meister-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-kubernetes-dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "31000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-03T13:42:05.221-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/desafio-project/global/firewalls/meister-fw-allow-kubernetes-dashboard",
            "log_config": [],
            "name": "meister-fw-allow-kubernetes-dashboard",
            "network": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/networks/desafio-network",
            "priority": 1000,
            "project": "desafio-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/firewalls/meister-fw-allow-kubernetes-dashboard",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "k8s"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-02T15:03:04.435-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/desafio-project/global/firewalls/meister-fw-allow-ssh",
            "log_config": [],
            "name": "meister-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/networks/desafio-network",
            "priority": 1000,
            "project": "desafio-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/firewalls/meister-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-05-02T14:17:38.577-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/desafio-project/global/firewalls/meister-fw-allow-internal",
            "log_config": [],
            "name": "meister-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/networks/desafio-network",
            "priority": 1000,
            "project": "desafio-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/firewalls/meister-fw-allow-internal",
            "source_ranges": [
              "10.15.1.0/24",
              "10.15.1.0/32",
              "192.168.15.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_balancer-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210420",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/desafio-project/zones/us-east1-c/disks/balancer-haproxy-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/desafio-project/zones/us-east1-c/instances/balancer-haproxy-01",
            "instance_id": "5839315845228172950",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDevhwoghRsFt3aQABCjuFk1+bkkOK+GLFFXyKZiikObL5i38+4V7L17V+JL9SzpZFw34nlXNitm40bvQBkZxO+i4KKddExxveR8Dzg3tL7FOZCYDL4IxbTpbedC3DfVMcwE9a9HvsHbSqeh31J/i9n9FjhgfcCXkgemHGURNc+RDCK+L0rApyPg90J8Lt8KA4KcakPeBU9YonlXkYzK5haHN47kRisQGPW1GGpbz2xpJjaSkychrRjFjLhOezfEHBEnSi5OALhJLAihY6U3Vbs0z2wH/1wTgppBvH87vLF5OKI6z67flXMUYPGMu4TJA6sXJbigCUHnQS16ywOYLet analivia@ithappens-3g\n"
            },
            "metadata_fingerprint": "jxENKljS4fM=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python-pip rsync htop",
            "name": "balancer-haproxy-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.196.164.201",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/networks/desafio-network",
                "network_ip": "10.15.1.6",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/desafio-project/regions/us-east1/subnetworks/meister-us-east1-priv-net",
                "subnetwork_project": "desafio-project"
              }
            ],
            "project": "desafio-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/desafio-project/zones/us-east1-c/instances/balancer-haproxy-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "https",
              "ssh"
            ],
            "tags_fingerprint": "FeWfR_dobKY=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_cicd-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210420",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/desafio-project/zones/us-east1-c/disks/cicd-jenkins-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/desafio-project/zones/us-east1-c/instances/cicd-jenkins-01",
            "instance_id": "3061712472875636375",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-highcpu-4",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDevhwoghRsFt3aQABCjuFk1+bkkOK+GLFFXyKZiikObL5i38+4V7L17V+JL9SzpZFw34nlXNitm40bvQBkZxO+i4KKddExxveR8Dzg3tL7FOZCYDL4IxbTpbedC3DfVMcwE9a9HvsHbSqeh31J/i9n9FjhgfcCXkgemHGURNc+RDCK+L0rApyPg90J8Lt8KA4KcakPeBU9YonlXkYzK5haHN47kRisQGPW1GGpbz2xpJjaSkychrRjFjLhOezfEHBEnSi5OALhJLAihY6U3Vbs0z2wH/1wTgppBvH87vLF5OKI6z67flXMUYPGMu4TJA6sXJbigCUHnQS16ywOYLet analivia@ithappens-3g\n"
            },
            "metadata_fingerprint": "jxENKljS4fM=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python-pip rsync htop",
            "name": "cicd-jenkins-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.74.166.7",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/networks/desafio-network",
                "network_ip": "10.15.1.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/desafio-project/regions/us-east1/subnetworks/meister-us-east1-priv-net",
                "subnetwork_project": "desafio-project"
              }
            ],
            "project": "desafio-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/desafio-project/zones/us-east1-c/instances/cicd-jenkins-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_kubernetes-master-node-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210420",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/desafio-project/zones/us-east1-c/disks/kubernetes-master-node-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/desafio-project/zones/us-east1-c/instances/kubernetes-master-node-01",
            "instance_id": "5321353135906792901",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-highcpu-4",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDevhwoghRsFt3aQABCjuFk1+bkkOK+GLFFXyKZiikObL5i38+4V7L17V+JL9SzpZFw34nlXNitm40bvQBkZxO+i4KKddExxveR8Dzg3tL7FOZCYDL4IxbTpbedC3DfVMcwE9a9HvsHbSqeh31J/i9n9FjhgfcCXkgemHGURNc+RDCK+L0rApyPg90J8Lt8KA4KcakPeBU9YonlXkYzK5haHN47kRisQGPW1GGpbz2xpJjaSkychrRjFjLhOezfEHBEnSi5OALhJLAihY6U3Vbs0z2wH/1wTgppBvH87vLF5OKI6z67flXMUYPGMu4TJA6sXJbigCUHnQS16ywOYLet analivia@ithappens-3g\n"
            },
            "metadata_fingerprint": "8jVD9Y7Rrrw=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python-pip rsync",
            "name": "kubernetes-master-node-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.229.27.140",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/networks/desafio-network",
                "network_ip": "10.15.1.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/desafio-project/regions/us-east1/subnetworks/meister-us-east1-priv-net",
                "subnetwork_project": "desafio-project"
              }
            ],
            "project": "desafio-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/desafio-project/zones/us-east1-c/instances/kubernetes-master-node-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "https",
              "k8s",
              "ssh"
            ],
            "tags_fingerprint": "3mFdr_ua8JE=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_kubernetes-worker-node-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210420",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/desafio-project/zones/us-east1-c/disks/kubernetes-worker-node-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/desafio-project/zones/us-east1-c/instances/kubernetes-worker-node-01",
            "instance_id": "4450580389595092545",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-highcpu-4",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDevhwoghRsFt3aQABCjuFk1+bkkOK+GLFFXyKZiikObL5i38+4V7L17V+JL9SzpZFw34nlXNitm40bvQBkZxO+i4KKddExxveR8Dzg3tL7FOZCYDL4IxbTpbedC3DfVMcwE9a9HvsHbSqeh31J/i9n9FjhgfcCXkgemHGURNc+RDCK+L0rApyPg90J8Lt8KA4KcakPeBU9YonlXkYzK5haHN47kRisQGPW1GGpbz2xpJjaSkychrRjFjLhOezfEHBEnSi5OALhJLAihY6U3Vbs0z2wH/1wTgppBvH87vLF5OKI6z67flXMUYPGMu4TJA6sXJbigCUHnQS16ywOYLet analivia@ithappens-3g\n"
            },
            "metadata_fingerprint": "jxENKljS4fM=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python-pip rsync htop",
            "name": "kubernetes-worker-node-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.227.41.125",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/networks/desafio-network",
                "network_ip": "10.15.1.8",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/desafio-project/regions/us-east1/subnetworks/meister-us-east1-priv-net",
                "subnetwork_project": "desafio-project"
              }
            ],
            "project": "desafio-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/desafio-project/zones/us-east1-c/instances/kubernetes-worker-node-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "k8s",
              "ssh"
            ],
            "tags_fingerprint": "17MvW2wNRZE=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_monitoring-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210420",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/desafio-project/zones/us-east1-c/disks/monitoring-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/desafio-project/zones/us-east1-c/instances/monitoring-01",
            "instance_id": "8977600654019303062",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-highcpu-4",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDevhwoghRsFt3aQABCjuFk1+bkkOK+GLFFXyKZiikObL5i38+4V7L17V+JL9SzpZFw34nlXNitm40bvQBkZxO+i4KKddExxveR8Dzg3tL7FOZCYDL4IxbTpbedC3DfVMcwE9a9HvsHbSqeh31J/i9n9FjhgfcCXkgemHGURNc+RDCK+L0rApyPg90J8Lt8KA4KcakPeBU9YonlXkYzK5haHN47kRisQGPW1GGpbz2xpJjaSkychrRjFjLhOezfEHBEnSi5OALhJLAihY6U3Vbs0z2wH/1wTgppBvH87vLF5OKI6z67flXMUYPGMu4TJA6sXJbigCUHnQS16ywOYLet analivia@ithappens-3g\n"
            },
            "metadata_fingerprint": "jxENKljS4fM=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python-pip rsync htop",
            "name": "monitoring-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.73.44.233",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/networks/desafio-network",
                "network_ip": "10.15.1.4",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/desafio-project/regions/us-east1/subnetworks/meister-us-east1-priv-net",
                "subnetwork_project": "desafio-project"
              }
            ],
            "project": "desafio-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/desafio-project/zones/us-east1-c/instances/monitoring-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_monitoring-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210420",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/desafio-project/zones/us-east1-c/disks/monitoring-02"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/desafio-project/zones/us-east1-c/instances/monitoring-02",
            "instance_id": "8497798565914121879",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-highcpu-4",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDevhwoghRsFt3aQABCjuFk1+bkkOK+GLFFXyKZiikObL5i38+4V7L17V+JL9SzpZFw34nlXNitm40bvQBkZxO+i4KKddExxveR8Dzg3tL7FOZCYDL4IxbTpbedC3DfVMcwE9a9HvsHbSqeh31J/i9n9FjhgfcCXkgemHGURNc+RDCK+L0rApyPg90J8Lt8KA4KcakPeBU9YonlXkYzK5haHN47kRisQGPW1GGpbz2xpJjaSkychrRjFjLhOezfEHBEnSi5OALhJLAihY6U3Vbs0z2wH/1wTgppBvH87vLF5OKI6z67flXMUYPGMu4TJA6sXJbigCUHnQS16ywOYLet analivia@ithappens-3g\n"
            },
            "metadata_fingerprint": "jxENKljS4fM=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python-pip rsync htop",
            "name": "monitoring-02",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.231.255.79",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/networks/desafio-network",
                "network_ip": "10.15.1.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/desafio-project/regions/us-east1/subnetworks/meister-us-east1-priv-net",
                "subnetwork_project": "desafio-project"
              }
            ],
            "project": "desafio-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/desafio-project/zones/us-east1-c/instances/monitoring-02",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_registry-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20210420",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/desafio-project/zones/us-east1-c/disks/registry-docker-01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/desafio-project/zones/us-east1-c/instances/registry-docker-01",
            "instance_id": "4071421930834663062",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDevhwoghRsFt3aQABCjuFk1+bkkOK+GLFFXyKZiikObL5i38+4V7L17V+JL9SzpZFw34nlXNitm40bvQBkZxO+i4KKddExxveR8Dzg3tL7FOZCYDL4IxbTpbedC3DfVMcwE9a9HvsHbSqeh31J/i9n9FjhgfcCXkgemHGURNc+RDCK+L0rApyPg90J8Lt8KA4KcakPeBU9YonlXkYzK5haHN47kRisQGPW1GGpbz2xpJjaSkychrRjFjLhOezfEHBEnSi5OALhJLAihY6U3Vbs0z2wH/1wTgppBvH87vLF5OKI6z67flXMUYPGMu4TJA6sXJbigCUHnQS16ywOYLet analivia@ithappens-3g\n"
            },
            "metadata_fingerprint": "jxENKljS4fM=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential python-pip rsync htop",
            "name": "registry-docker-01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.243.183.190",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/networks/desafio-network",
                "network_ip": "10.15.1.7",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/desafio-project/regions/us-east1/subnetworks/meister-us-east1-priv-net",
                "subnetwork_project": "desafio-project"
              }
            ],
            "project": "desafio-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/desafio-project/zones/us-east1-c/instances/registry-docker-01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/desafio-project/global/networks/desafio-network",
            "mtu": 0,
            "name": "desafio-network",
            "project": "desafio-project",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/networks/desafio-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-05-02T14:23:48.962-07:00",
            "gateway_address": "10.15.1.1",
            "id": "projects/desafio-project/regions/us-east1/subnetworks/meister-us-east1-priv-net",
            "ip_cidr_range": "10.15.1.0/24",
            "name": "meister-us-east1-priv-net",
            "network": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/networks/desafio-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "desafio-project",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/desafio-project/regions/us-east1/subnetworks/meister-us-east1-priv-net"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-05-02T14:23:48.278-07:00",
            "gateway_address": "192.168.15.1",
            "id": "projects/desafio-project/regions/us-east1/subnetworks/meister-us-east1-pub-net",
            "ip_cidr_range": "192.168.15.0/24",
            "name": "meister-us-east1-pub-net",
            "network": "https://www.googleapis.com/compute/v1/projects/desafio-project/global/networks/desafio-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "desafio-project",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/desafio-project/regions/us-east1/subnetworks/meister-us-east1-pub-net"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}